--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             'gerente': 7
         };
 
-        const checkboxesASeleccionar = ['checkbox-0', 'checkbox-1', 'checkbox-3'];
+        const checkboxesASeleccionar = ['checkbox-0', 'checkbox-3'];
 
         // Fetch the JSON data from a local file or API endpoint
-        fetch('https://gist.githubusercontent.com/darwinyusef/ddd28f74e82d50f36443be576cc0b13e/raw')
+        fetch('https://gist.githubusercontent.com/darwinyusef/ddd28f74e82d50f36443be576cc0b13e/raw/f39c2f240ac3a9df81a09c229cb77b15b1f6e95a/algoritmoinfo.json')
             .then(response => response.json())
             .then((data) => {
 
