--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             'gerente': 7
         };
 
-        const checkboxesASeleccionar = ['checkbox-0', 'checkbox-3'];
+        const checkboxesASeleccionar = ['checkbox-0', 'checkbox-1', 'checkbox-3'];
 
         // Fetch the JSON data from a local file or API endpoint
         fetch('https://gist.githubusercontent.com/darwinyusef/ddd28f74e82d50f36443be576cc0b13e/raw/905253656edb564fd33226921ca55ba81ba07e5d/algoritmoinfo.json')
